--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "esbuild": "^0.15.14",
+    "jquery": "^3.6.1",
     "sass": "^1.56.1"
   },
   "scripts": {
