--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.6",
     "@rails/ujs": "^7.0.4",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "esbuild": "^0.15.14",
     "jquery": "^3.6.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.56.1"
   },
   "scripts": {
