--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -9,7 +9,7 @@ development:
       # Otherwise define the parameters separately.
       # This defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: funny_videos_dev
+      database: funny_movies_dev
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -176,7 +176,7 @@ development:
 test:
   clients:
     default:
-      database: funny_videos_test
+      database: funny_movies_test
       hosts:
         - localhost:27017
       options:
